@@ -1,22 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-DESCRIPTION="Rebuild Emacs packages"
-HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
-#SRC_URI="mirror://gentoo/${P}.tar.bz2"
-SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
-IUSE=""
-
-DEPEND=""
-RDEPEND="!<=app-admin/eselect-emacs-1.5
-	app-portage/portage-utils
-	virtual/emacs"
-
-src_install() {
-	dosbin emacs-updater || die "dosbin failed"
-}
