@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Sep 2008; Ulrich Mueller <ulm@gentoo.org>
+  -emacs-updater-1.0_rc1.ebuild, -emacs-updater-1.0_rc2.ebuild:
+  Remove release candidates since the package was added to Portage tree.
+
 *emacs-updater-1.0_rc2 (02 Sep 2008)
 
   02 Sep 2008; Ulrich Mueller <ulm@gentoo.org>
